fix no more scrollbar on mobile

--- a/client/src/components/ArtContent/styles.css
+++ b/client/src/components/ArtContent/styles.css
@@ -23,3 +23,13 @@
 .art-detail-inner-container {
   margin-bottom: calc(0.5rem + 40px);
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
